--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,9 +1,10 @@
 .divider{
-  border-bottom-style: solid;
-  border-bottom-color: #ffffff;
-  border-bottom-width: 2px;
+  border: 2px solid #ffffff;
 }
-
+.cont-divider{
+  width: 60vw;
+  left: 30vw;
+}
 /*mobile-first*/
 
 .fundo{
