--- a/assets/css/nivel.css
+++ b/assets/css/nivel.css
@@ -308,6 +308,22 @@
   .list-modal{
     list-style-type: none;
   }
+  .elem-menu-modal{
+    width: 10vw;
+    height:40px;
+  }
+  .elem-menu-modal img{
+      padding-left: 20px;
+      float: left;
+  }
+  .elem-menu-modal p{
+      padding-left: 40px;
+      text-align: left;
+  }
+  .tamanho-img-modal{
+      height:56px;
+      width: 56px;
+  }
 
 
 }
