--- a/assets/css/fase1.css
+++ b/assets/css/fase1.css
@@ -7,6 +7,7 @@
     border-radius: 10px;
     transition: all 1s;
     backface-visibility: hidden;
+    background-repeat: no-repeat;
 }
 .back.flipped{
     transform: rotateY(180deg);
