Alterações no desing - página inicial

--- a/assets/css/nivel.css
+++ b/assets/css/nivel.css
@@ -1,13 +1,14 @@
 /*arrumar os aquivos de estilo porque estão uma bagunça*/
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap');
+
 /*Global*/
-.btn-facil:not(:disabled):not(.disabled) {
+.btn-facil{
   background: #Bb78CC;
 }
-.btn-medio:not(:disabled):not(.disabled) {
+.btn-medio {
   background: #664F9F;
 }
-.btn-dificil:not(:disabled):not(.disabled) {
+.btn-dificil {
   background: #CB5881;
 }
 #modal-sair{
