--- a/assets/css/instrucoes.css
+++ b/assets/css/instrucoes.css
@@ -2,20 +2,22 @@
 /*DESKTOP*/
 @media(min-width: 1001px){
 
-    .containerTutorial{
-       width:800px;
-    }
      .subtitulo-2{
         font-size: 48px;
     }
     .tamanhoP{
         font-size: 24px;
     }
+    .bg-style{
+        border-radius: 10px;
+        background-repeat: no-repeat !important;
+        background-position: center !important;
+    }
     .Inst1{
         background-image: url("../img/fase1/0.png");
     }
     .Inst2{
-        background-image: url("../img/fase2/0.png");
+        background-image: url("../img/fase2/8.png");
     }
     .Inst3{
         background-image: url("../img/fase3/0.png");
@@ -24,22 +26,12 @@
     .btn-position{
         top: 150px;
     }
-    .faces{
-    width: 100%;
-    height: 100%; /*para que as faces fiquem sobrepostas*/
-    border-radius: 10px;
-    transition: all 1s;
-    backface-visibility: hidden;
-    background-repeat: no-repeat !important;
-    background-position: center !important;
+    #cardI0{
+        left:-160px;
     }
-    #cardT0{
-        top: 48vh;
+    #cardI1{
+        left:120px;
     }
-    #cardT1{
-        top: 48vh;
-    }
-    
 }
 /*TABLET*/
 @media(min-width: 600px) and (max-width: 1000px){
