--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -36,8 +36,9 @@ height: 8px;
   background: #541663;
   border: 4px solid #ffffff;
   border-radius: 10px;
-  vertical-align: center;
+  
   text-align: center;
+  line-height: 1.8;
 }
 .titulo{
   color: rgb(255,255,255);
