--- a/assets/css/instrucoes.css
+++ b/assets/css/instrucoes.css
@@ -8,6 +8,12 @@
     .tamanhoP{
         font-size: 24px;
     }
+    .cardT{
+    width: 100px;
+    height: 100px;
+    position: absolute; /*é importante mas porque?*/
+    background: #FFFFFF;
+    }
     .bg-style{
         border-radius: 10px;
         background-repeat: no-repeat !important;
@@ -22,50 +28,22 @@
     .Inst3{
         background-image: url("../img/fase3/0.png");
     }
-
     .btn-position{
         top: 150px;
     }
-    #cardI0{
-        left:-160px;
-    }
-    #cardI1{
-        left:120px;
-    }
+  /*  #cardI0{
+        left:-20px;
+    }*/
+   /* #cardI1{
+        left:80px;
+    }*/
 }
 /*TABLET*/
 @media(min-width: 600px) and (max-width: 1000px){
-    .containerTutorial{
-        width: 60vw; /*O tamanho das cartas esta muito pequeno em comparação ao tamanho da tela*/
-        height: 64vh;
-        top: 0px;
-        left: 2vw;
-        /*border: 1px solid #000;*/
-        position: relative;
-        margin: 0 auto;
-        border-radius: 10px;
-    }
-
-
-    
+  
 }
 /*MOBILE*/
 @media(max-width: 599px){ 
-    .containerTutorial{
-        width: 50vw; /*O tamanho das cartas esta muito pequeno em comparação ao tamanho da tela*/
-        height: 24vh;
-        top: 20px;
-        left: 2.5vw;
-        position: relative;
-        margin: 0 auto;
-        border-radius: 10px;
-    }
-   /* .card{
-        width: 72px;
-        height: 72px;
-        position: absolute; 
-        border-radius: 10px;
-        perspective: 600px;
-    }   */
+
     
 }
