--- a/assets/css/menu-modal.css
+++ b/assets/css/menu-modal.css
@@ -6,9 +6,13 @@
   @media(max-width: 599px){
     
   .elem-menu-modal img{
-    padding-left: 3%;
     float: left;
   }
+  .elem-menu-modal p{
+    padding-left: 6%;
+    float: left;
+  }
+  
   .elem-modal-height{
     line-height: 20px;
     height: 20px;
@@ -22,6 +26,7 @@
     padding-left: -4%;
     padding-bottom: 8%;
   }
+
   }
 
    /*versão tablet */
