--- a/assets/css/instrucoes.css
+++ b/assets/css/instrucoes.css
@@ -9,8 +9,8 @@
         font-size: 24px;
     }
     .cardT{
-    width: 100px;
-    height: 100px;
+    width: 100%;
+    height: 100%;
     position: absolute; /*é importante mas porque?*/
     background: #FFFFFF;
     }
@@ -29,14 +29,15 @@
         background-image: url("../img/fase3/0.png");
     }
     .btn-position{
-        top: 150px;
+        top: 160px;
+        position: absolute;
     }
-  /*  #cardI0{
-        left:-20px;
-    }*/
-   /* #cardI1{
+   #cardI0{
+        right:40px;
+    }
+   #cardI1{
         left:80px;
-    }*/
+    }
 }
 /*TABLET*/
 @media(min-width: 600px) and (max-width: 1000px){
