--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,195 +1,135 @@
-
-*{
-  overflow: hidden;
-  }
-  .display-center{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-  }
-  .fundo{
-    display: block;
-    overflow: hidden;
-    width: 100%;
-    height: 100vh;
-    background: rgb(136,69,153);
-    text-align: center;
-    justify-content: center;
-  }
-  .espaco-6{
-    /*56px*/
-    height: 6%;
-  }
-  .espaco-3{
-    /*32px*/
-    height: 0.5%;
-  }
-  .espaco-1{
-    /*32px*/
+/**/
+.display-center{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.fundo{
+  display: block;
+  overflow-y: hidden;
+  overflow-x: hidden;
+  width: 100%;
+  height: 100vh;
+  background: rgb(136,69,153);
+  text-align: center;
+  justify-content: center;
+}
+.espaco-1{
   height: 8px;
   }
-  .espaco-05{
-    height: 4px;
+.espaco-2{
+   height: 16px;
   }
-  .btn {
-    width: 198px;
-    height: 48px;
-    font-size: 16px;
-    font-family: 'Fira Sans', sans-serif;
-    background: #541663;
-    border: 2px solid #ffffff;
-    border-radius: 10px;
-    text-align: center;
-    line-height: 1.6;
-  }
-  
-  a{
+.espaco-3{
+  height:32px;
+}
+.espaco-6{
+  height: 56px;
+}
+.espaco-3{
+  height:32px;
+}
+.btn {
+  width: 12.375rem;
+  height: 3.5rem;
+  font-size: 1.25rem;
+  font-family: 'Fira Sans', sans-serif;
+  background: #541663;
+  border: 4px solid #ffffff;
+  border-radius: 10px;
+  text-align: center;
+  line-height: 1.8;
+}
+a{
+  color: rgb(255,255,255);
+}
+.btn-facil{
+  background: #Bb78CC;
+}
+.btn-medio {
+  background: #664F9F;
+}
+.btn-dificil {
+  background: #CB5881;
+}
+/*MOBILE*/
+@media(max-width: 599px){
+  .titulo{
     color: rgb(255,255,255);
+    font-family: 'Luckiest Guy', cursive; 
+    font-size: 3.5rem;
+    -webkit-text-fill-color:rgba(255, 255, 255, 0.9) ;
+    -webkit-text-stroke-color: #000000;
+    -webkit-text-stroke-width: 1px;
+    letter-spacing: -0.015em;
+    line-height: 3.5rem;
   }
   
-  /*versão MOBILE*/
-  @media(max-width: 599px){
-    .titulo{
-      color: rgb(255,255,255);
-      font-family: 'Luckiest Guy', cursive; 
-      font-size: 48px;
-      -webkit-text-fill-color:rgba(255, 255, 255, 0.9) ;
-      -webkit-text-stroke-color:#000000;
-      -webkit-text-stroke-width: 1px;
-    }
-    .subtitulo-t{
-      color: rgb(255,255,255);
-      font-size: 24px;
-      -webkit-text-stroke-color:#000000;
-      -webkit-text-stroke-width: 0.5px;
-    }
-  .caixa-btns-c{
-      display: flex;
-      flex-direction: row;
-      align-items: flex-start;
-      height: 100px;
-      top: 24vh;
-    }
-    .elem-btn-c{
-      height: 72px;
-      width: 72px;
-    }
-    .btn-circ{
-      position: static;
-      width: 72px;
-      height: 72px;
-    }
-    .cards-inicial{
-      width: 80vw;
-      height: 16vh;
-    }
-    .logo-eic{
-      width: 40vw;
-    }
+  .subtitulo-t{
+    color: rgb(255,255,255);
+    font-size: 2rem;
+    line-height: 2rem;
+    font-weight: 700;
+    -webkit-text-fill-color:rgba(255, 255, 255, 0.9) ;
+    -webkit-text-stroke-color: #000000;
+    -webkit-text-stroke-width: 1px;
   }
-  /*versão tablet */ 
-  @media(min-width: 600px) and (max-width: 1000px){
-  
-    .titulo{
-      color: rgb(255,255,255);
-      font-family: 'Luckiest Guy', cursive; 
-      font-size: 64px;
-      -webkit-text-fill-color:rgba(255, 255, 255, 0.9) ;
-      -webkit-text-stroke-color:#000000;
-      -webkit-text-stroke-width: 1.5px;
-    }
-    .subtitulo-t{
-      color: rgb(255,255,255);
-      font-size: 32px;
-      -webkit-text-stroke-color:#000000;
-      -webkit-text-stroke-width: 0.8px;
-    }
-    .logo-eic{
-      top: 85%;
-      bottom: 5%;
-    }
-  .alinhamento-botoes{
-    align-items: center;
+}
+
+/*TABLET */ 
+@media(min-width: 600px) and (max-width: 1000px){
+
+  .titulo{
+    color: rgb(255,255,255);
+    font-family: 'Luckiest Guy', cursive; 
+    font-size: 5.75rem; /*92px*/
+    line-height:  5.75rem;
+    font-weight: 400;
+    -webkit-text-fill-color:rgba(255, 255, 255, 0.9) ;
+    -webkit-text-stroke-color: #000000;
+    -webkit-text-stroke-width: 2px;
   }
-    .caixa-btns-c{  
-      display: flex;
-      flex-direction: row;
-      align-items: flex-start;
-      height: 120px;
-      top: 32vh;
-    }
-  
-    .espaco-3{
-      /*32px*/
-     height: 1.6%;
-   }
-   .elem-btn-c{
-    height:56px;
-    width: 72px;
+  .subtitulo-t{
+    color: rgb(255,255,255);
+    font-size: 3rem;
+    line-height: 3rem;
+    font-weight: 700;
+    -webkit-text-fill-color:rgba(255, 255, 255, 0.9) ;
+    -webkit-text-stroke-color: #000000;
+    -webkit-text-stroke-width: 1px;
   }
-  .cards-inicial{
-    width: 40vw;
-    height: 16vh;
+}
+/*versão DESKTOP*/
+
+@media (min-width: 1001px){
+  .titulo{
+    color: rgb(255,255,255);
+    font-family: 'Luckiest Guy', cursive; 
+    font-size: 5.75rem; /*92px*/
+    line-height:  5.75rem;
+    font-weight: 400;
+    -webkit-text-fill-color:rgba(255, 255, 255, 0.9) ;
+    -webkit-text-stroke-color: #000000;
+    -webkit-text-stroke-width: 2px;
   }
-  .logo-eic{
-    top: 80%;
-    width: 20vw;
+  .subtitulo-t{
+    color: rgb(255,255,255);
+    font-size: 3rem; /*48px*/
+    line-height: 3rem;;
+    font-weight: 700;
+    -webkit-text-stroke-color: #000000;
+    -webkit-text-stroke-width: 0.8px;
   }
-      
-  }
-  /*versão DESKTOP */
-  @media (min-width: 1001px){
-    .titulo{
-      color: rgb(255,255,255);
-      font-family: 'Luckiest Guy', cursive; 
-      font-size: 64px;
-      -webkit-text-fill-color:rgba(255, 255, 255, 0.9) ;
-      -webkit-text-stroke-color: #000000;
-      -webkit-text-stroke-width: 1.5px;
-    }
-    .subtitulo-t{
-      color: rgb(255,255,255);
-      font-size: 32px;
-      -webkit-text-stroke-color: #000000;
-      -webkit-text-stroke-width: 1px;
-    }
-    .logo-eic{
-      height: 48px;
-    }
-   
-    .largura-espaco{
-      width: 38vw;
-    }
-    .caixa-btns-c{
-      display: flex;
-      flex-direction: row;
-      align-items: flex-start;
-      padding: 0px 0px 0px;
-      height: 64px;
-      top: 48vh;
-    }
-    .espaco-3{
-      /*32px*/
-     height: 3%;
-   }
-   .h-espaco-botoes{
-     width: 20px;
-   }
-  
-   #btn-voltar-d{
-    padding-left: 4%;
-    padding-top: 1%;
-   }
-   .img-voltar{
-     width: 32px;
-     height:32px;
-   }
-   .cards-inicial{
-    width: 32vw;
-    height: 16vh;
-  }
-      
-      
-  }
-   
-  
+ 
+ /*NÃO SEI O QUE É*/
+/* #btn-voltar-d{
+  padding-left: 4%;
+  padding-top: 1%;
+ }
+ .img-voltar{
+   width: 32px;
+   height:32px;
+ }*/
+
+}
+ 
