--- a/assets/css/nivel.css
+++ b/assets/css/nivel.css
@@ -53,7 +53,8 @@
   .subtitulo-2{
     text-align: center;
     color: rgb(255,255,255);
-    font-size: 38px;
+    font-size: 2.375rem;
+    line-height: 2.8rem;
     font-family: 'Luckiest Guy', cursive; 
     -webkit-text-fill-color:rgba(255, 255, 255, 0.9) ;
     -webkit-text-stroke-color: #000000;
@@ -172,7 +173,8 @@
   .subtitulo-2{
       text-align: center;
       color: rgb(255,255,255);
-      font-size: 38px;
+      font-size: 2.375rem;
+      line-height: 2.8rem;
       font-family: 'Luckiest Guy', cursive; 
       -webkit-text-fill-color:rgba(255, 255, 255, 0.9) ;
       -webkit-text-stroke-color: #000000;
@@ -183,8 +185,8 @@
       font-family: Fira Sans;
       font-style: normal;
       font-weight: 500;
-      font-size: 20px;
-      line-height: 29px;
+      font-size: 1.25rem;
+      line-height: 1.81rem;
       text-align: center;
       color: #F0E2F3;
   }
@@ -209,7 +211,8 @@
   .subtitulo-2{
     text-align: center;
     color: rgb(255,255,255);
-    font-size: 46px;
+    font-size: 2.875rem;
+    line-height: 3.4rem;
     font-family: 'Luckiest Guy', cursive; 
     -webkit-text-fill-color:rgba(255, 255, 255, 0.9) ;
     -webkit-text-stroke-color: #000000;
@@ -220,12 +223,12 @@
     font-family: Fira Sans;
     font-style: normal;
     font-weight: 500;
-    font-size: 24px;
-    line-height: 29px;
+    font-size: 1.5rem;
+    line-height: 1.5rem;
     text-align: center;
     color: #F0E2F3;
 }
-.p-destaque{
+/*.p-destaque{
   font-family: Fira Sans;
   font-style: normal;
   font-weight: 800;
@@ -233,8 +236,7 @@
   line-height: 29px;
   text-align: center;
   color: #FFFFFF;
-}
-  
+}*/
   .titulo{
     color: rgb(255,255,255);
     font-family: 'Luckiest Guy', cursive; 
@@ -250,12 +252,13 @@
   .alinhamento{
     align: left;
   }
+  /*modal sair*/
   #modal-sair{
     z-index: -5;
     background: #FFFFFF;
     position: absolute;
-    width: 40vw;
-    height: 48vh;
+    width: 40%;
+    height: 48%;
     border-radius: 8px;
     left: 32%;
     top: 24%;
