--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -74,6 +74,36 @@ a{
     -webkit-text-stroke-color: #000000;
     -webkit-text-stroke-width: 1px;
   }
+  .subtitulo-2{
+    text-align: center;
+    color: rgb(255,255,255);
+    font-size: 2.375rem;
+    line-height: 2.5rem;
+    font-family: 'Luckiest Guy', cursive; 
+    -webkit-text-fill-color:rgba(255, 255, 255, 0.9) ;
+    -webkit-text-stroke-color: #000000;
+    -webkit-text-stroke-width: 1px;
+    letter-spacing: -0.015em;
+  }
+  p{
+      font-family: Fira Sans;
+      font-style: normal;
+      font-weight: 500;
+      font-size: 1.25rem;
+      line-height: 1.3rem;
+      text-align: left;
+      color: #F0E2F3;
+      text-align: center;
+  }
+  .destaque{
+    font-family: Fira Sans;
+    font-style: normal;
+    font-weight: 800;
+    font-size: 1.25rem;
+    line-height: 1.35rem;
+    text-align: center;
+    color: #FFFFFF;
+  }
 }
 
 /*TABLET */ 
@@ -98,6 +128,35 @@ a{
     -webkit-text-stroke-color: #000000;
     -webkit-text-stroke-width: 1px;
   }
+  .subtitulo-2{
+    text-align: center;
+    color: rgb(255,255,255);
+    font-size: 2.875rem;
+    line-height: 3.4rem;
+    font-family: 'Luckiest Guy', cursive; 
+    -webkit-text-fill-color:rgba(255, 255, 255, 0.9) ;
+    -webkit-text-stroke-color: #000000;
+    -webkit-text-stroke-width: 1px;
+    letter-spacing: -0.015em;
+  }
+  p{  
+    font-family: Fira Sans;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 1.5rem;
+    line-height: 1.5rem;
+    text-align: center;
+    color: #F0E2F3;
+}
+  .destaque{
+    font-family: Fira Sans;
+    font-style: normal;
+    font-weight: 800;
+    font-size: 1.5rem;
+    line-height: 1.8rem;
+    text-align: center;
+    color: #FFFFFF;
+}
 }
 /*versão DESKTOP*/
 
@@ -120,7 +179,34 @@ a{
     -webkit-text-stroke-color: #000000;
     -webkit-text-stroke-width: 0.8px;
   }
- 
-
+  .subtitulo-2{
+    text-align: center;
+    color: rgb(255,255,255);
+    font-size: 2.375rem;
+    line-height: 2.8rem;
+    font-family: 'Luckiest Guy', cursive; 
+    -webkit-text-fill-color:rgba(255, 255, 255, 0.9) ;
+    -webkit-text-stroke-color: #000000;
+    -webkit-text-stroke-width: 1px;
+    letter-spacing: -0.015em;
+}
+  p{  
+      font-family: Fira Sans;
+      font-style: normal;
+      font-weight: 500;
+      font-size: 1.25rem;
+      line-height: 1.35rem;
+      text-align: center;
+      color: #F0E2F3;
+  }
+  .destaque{
+    font-family: Fira Sans;
+    font-style: normal;
+    font-weight: 800;
+    font-size: 1.25rem;
+    line-height: 1.5rem;
+    text-align: center;
+    color: #FFFFFF;
+  }
 }
  
